# skat-ai

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  input_position.json  main.py  opencode.json  pyproject.toml  temp_output.json
docs/: architecture.md  dataset_partition_policies.md  declarer_card_exposure.md  declarer_concessions.md  defender_concessions.md  examples.md  game_end.md  historical_decision_snapshots.md  historical_game_review.md  historical_games.md  historical_opponent_profiles.md  historical_opponent_statistics.md  input_json.md  live_opponent_profiles.md  opponent_policy_evaluation.md  opponent_profile_derivation.md  opponent_statistics.md  output_json.md  overbid.md  performance_rating.md  project_handoff.md  requirements_traceability.md  roadmap.md  schema_validation.md  scoring.md  training_data.md  v1_scope.md
examples/: declarer_card_exposure.json  declarer_concession.json  defender_concession.json  grand_claimed_remaining_tricks.json  grand_complete_declarer_loss.json  grand_complete_declarer_win.json  grand_declarer_conceded_remaining_tricks.json  grand_declarer_known_to_declarer_live.json  grand_defenders_conceded_remaining_tricks.json  grand_late_game_history_heavy_live.json  grand_leading.json  grand_left_right_opponent_policies.json  grand_left_to_act_live.json  grand_list_analysis_results.json  grand_list_game_contributions.json  grand_list_performance_input.json  grand_list_standings_input.json  grand_midgame_declarer_ahead.json  grand_midgame_defenders_ahead.json  grand_midgame_profile_preset_live.json  (+21 more)
(+159 files in other folders)
