[project]
name = "skat-ai"
version = "0.3.0"
description = "Local Skat analysis and simulation tool"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "jsonschema>=4.0.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
