[project]
name = "skat-ai"
version = "0.8.0"
description = "Local Skat analysis and simulation tool"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "jsonschema>=4.0.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
